# liftwing-python

./: .gitignore  .pre-commit-config.yaml  README.md  example.py  pyproject.toml
.github/workflows/: ci.yml  publish_python_package.yml
examples/: revertrisk_examples.py
liftwing/: __init__.py  __main__.py
liftwing/models/: __init__.py  article_quality.py  article_topic.py  draftTopic.py  lang_id.py  language.py  language_agnostic.py  language_id.py  liftwing_model.py  readability.py  readability_validation.py  revertrisk.py  revertrisk_multilingual.py  revscoring.py
liftwing/utils/: validator.py
src/liftwing_api/models/: articletopic.py  base_api_model.py  draftQuality.py  draftTopic.py  langid.py  liftwing_model.py  readability.py  revScoreGoodfaith.py  revertRiskMultilingual.py  revertrisk.py  revscoredamaging.py  revscoring.py
tests/: revertrisk_examplestest.py
tests/models/: revertriskTest.py
