[project]
name = "liftwing-python"
version = "0.1.0"
authors = [
    {name = "Mercelis Vaughan", email = "mercelisvaughan@gmail.com"},
]
description = "Users will be able to retrieve JSON responses from their respective wiki APIs"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests",
]
