[project]
name = "liftwing-python"
version = "0.1.0"
authors = [
    {name = "Mercelis Vaughan", email = "mercelisvaughan@gmail.com"},
]
description = "A python client to interact with machine learning microservices hosted on Lift Wing"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests",
]
