[project]
name = "liftwing"
version = "0.1.1"
authors = [
    {name = "Mercelis Vaughan", email = "mercelisvaughan@gmail.com"},
    {name = "WMF Machine Learning Team", email = "ml@wikimedia.org"}
]
description = "A python client to interact with Machine Learning microservices hosted on Lift Wing"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests",
    "pydantic~=2.7"
]
